# xCarSwap-sc

./: .gitignore  Cargo.toml
interaction/: devnet-send-nft.sh  devnet.snippets.sh  mainnet-fund.sh  mainnet.snippets.txt  requirements.txt  test.py  testnet-real.sh
mandos/: 1ReadMe.txt  buy-maxtickets.scen.txt  buy-ticket.scen.txt  buy-tickets-acc2.scen.txt  claim-funds-running.scen.txt  fund-prizepool.scen.txt  lottery-init.scen.json  set-wallets.scen.txt  start_lottery.scen.json  winner-again.scen.txt  winner-before-deadline.scen.txt  winner.scen.txt
meta/: Cargo.toml
meta/src/: main.rs
src/: lottery_status.rs  nft_status.rs  xcarswap.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
