[package]
name = "xcarswap"
version = "0.0.0"
authors = [ "sd",]
edition = "2018"
publish = false

[lib]
path = "src/xcarswap.rs"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dependencies.elrond-wasm]
version = "0.34.1"

[dev-dependencies.elrond-wasm-debug]
version = "0.34.1"
